--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
-/* HTML: <div class="loader"></div> */
+
 .loader {
     width: 100px;
-    display: grid;
-    background: radial-gradient(farthest-side, #fff 98%, #0000) center/30px 100%
-      no-repeat;
-    --mask: 
-      radial-gradient(12px at left 15px top 50%, #0000 95%, #000),
-      radial-gradient(12px at center, #0000 95%, #000),
-      radial-gradient(12px at right 15px top 50%, #0000 95%, #000);
-    -webkit-mask: var(--mask);
-            mask: var(--mask);
-    -webkit-mask-composite: source-in;
-            mask-composite: intersect;
-    animation: l2 1s infinite alternate;
+    height: 40px;
+    --g: radial-gradient(farthest-side,#0000 calc(95% - 3px),#fff calc(100% - 3px) 98%,#0000 101%) no-repeat;
+    background: var(--g), var(--g), var(--g);
+    background-size: 30px 30px;
+    animation: l9 1s infinite alternate;
   }
-  .loader:before,
-  .loader:after {
-    content: "";
-    grid-area: 1/1;
-    height: 30px;
-    aspect-ratio: 1;
-    background: #fff;
-    border-radius: 50%;
-  }
-  .loader:after {
-    margin-left: auto;
-  }
-  @keyframes l2 {
-    to {
-      width: 50px;
+  @keyframes l9 {
+    0% {
+      background-position: 0 50%, 50% 50%, 100% 50%;
+    }
+    20% {
+      background-position: 0 0, 50% 50%, 100% 50%;
+    }
+    40% {
+      background-position: 0 100%, 50% 0, 100% 50%;
+    }
+    60% {
+      background-position: 0 50%, 50% 100%, 100% 0;
+    }
+    80% {
+      background-position: 0 50%, 50% 50%, 100% 100%;
+    }
+    100% {
+      background-position: 0 50%, 50% 50%, 100% 50%;
     }
   }
